--- a/chekin/index.html
+++ b/chekin/index.html
@@ -81,7 +81,9 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			font-size: 5vw
+			font-size: 3.5vw;
+			padding: 0 3vw;
+			text-align: center
 		}
 
 		main {
