--- a/chekin/index.html
+++ b/chekin/index.html
@@ -31,7 +31,7 @@
 			100% {
 				opacity: 0;
 				visibility: hidden;
-				transform: translateY(-5vh);	
+				transform: translateY(-5vh);
 			}
 		}
 
@@ -42,7 +42,8 @@
 			}
 
 
-			10%, 90% {
+			10%,
+			90% {
 				opacity: 1;
 				visibility: visible
 			}
@@ -104,7 +105,8 @@
 			display: flex;
 			align-items: center;
 			overflow: hidden;
-			opacity: .7
+			opacity: .7;
+			text-transform: capitalize
 		}
 
 		main .inscritos>div:nth-child(odd) {
@@ -202,12 +204,34 @@
 			transform: translateY(0vh);
 			animation: msgError 5s
 		}
+
+		.count {
+			position: absolute;
+			top: .5vh;
+			right: .5vh;
+			display: flex
+		}
+
+		.count .bubble {
+			font-size: 1vw;
+			background: #CCCCCC;
+			border-radius: 50%;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 3vw;
+			width: 3vw;
+		}
 	</style>
 	<script defer src="instascan.min.js"></script>
 	<script defer src="main.js"></script>
 </head>
 
 <body>
+	<div class="count">
+		<div class="bubble time-left">--</div>
+		<div class="bubble insc">--</div>
+	</div>
 	<div class="msgs">mensagem</div>
 	<div class="title">...</div>
 	<main>
