--- a/checkin/index.html
+++ b/checkin/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title></title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	<style type="text/css">
 		@keyframes show {
@@ -343,6 +344,28 @@
 			color: #FFFFFF;
 			right: 1vw;
 			top: 1vw;
+		}
+
+
+		@media only screen and (max-width: 600px) {
+			.title {
+				font-size: 3vw;
+				height: 6vh;
+			}
+
+			main {
+				flex-direction: column;
+				width: 100%
+			}
+
+			main .qrcode {
+				width: 100%;
+				height: 23vh;
+			}
+
+			main .inscritos {
+				width: 100%;
+			}
 		}
 	</style>
 	<script defer src="instascan.min.js"></script>
