--- a/checkin/index.html
+++ b/checkin/index.html
@@ -7,6 +7,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	<style type="text/css">
+		@keyframes loading {
+			0% {
+				transform: scale(1);
+				opacity: 1
+			}
+
+			50% {
+				transform: scale(1.05);
+				opacity: 0
+			}
+
+			100% {
+				transform: scale(1);
+				opacity: 1
+			}
+		}
+
 		@keyframes show {
 			0% {
 				transform: scale(1);
@@ -105,6 +122,15 @@
 			overflow-x: hidden;
 		}
 
+		main .inscritos .loading {
+			display: block;
+			text-align: center;
+			padding: 5vw;
+			font-size: 5vw;
+			color: #27ae60;
+			animation: loading 1s ease infinite;
+		}
+
 		main .inscritos>div {
 			padding: 1vw;
 			font-size: 2vw;
@@ -197,15 +223,17 @@
 		}
 
 		main .qrcode input {
-			background: #2c3e50;
+			position: absolute;
+			bottom: 0;
+			background: #2c3e50cc;
 			color: #DDDDDD;
 			display: flex;
-			font-size: 3vh;
+			font-size: 2vh;
 			flex: none;
 			text-align: center;
 			border: 0 none;
 			width: 100%;
-			height: 7vh;
+			padding: 1vw 0;
 		}
 
 		main .qrcode .eticoins {
@@ -361,15 +389,34 @@
 			main .qrcode {
 				width: 100%;
 				height: 23vh;
+				flex-direction: row;
+			}
+
+			main .qrcode .video-handler {
+				/* display: none */
+			}
+
+			main .qrcode .eticoins {
+				font-size: 8vh
 			}
 
 			main .inscritos {
 				width: 100%;
 			}
+
+			main .inscritos>div {
+				font-size: 5vw;
+				padding: 2vw
+			}
+
+			.options .close {
+				width: 10vw;
+				height: 10vw;
+				font-size: 5vw;
+			}
 		}
 	</style>
 	<script defer src="instascan.min.js"></script>
-	<script defer src="main.js"></script>
 </head>
 
 <body>
@@ -397,15 +444,18 @@
 		<div class="qrcode">
 			<div class="video-handler">
 				<video></video>
+				<input type="phone">
 			</div>
-			<input>
 			<div class="eticoins">
 				<div class="points">---</div>
 				<div class="nome">...</div>
 			</div>
 		</div>
-		<div class="inscritos"></div>
+		<div class="inscritos">
+			<span class="loading">carregando</span>
+		</div>
 	</main>
+	<script defer src="main.js"></script>
 </body>
 
 </html>
